# nexus

./: .dockerignore  .env.example  .gitignore  2_prompt.txt  3_prompt.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.ponti.yml  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  init_prompt.txt  nexus.code-workspace  renovate.json
doc/: FLOWS.md  (+4 more)
nexus-ai-operators/: .env.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
nexus-ai-operators/app/: main.py
nexus-ai-operators/app/adapters/: nexus_core_client.py  nexus_saas_client.py
nexus-ai-operators/app/api/: routes.py
nexus-ai-operators/app/core/: config.py  logging.py  metrics.py
nexus-ai-operators/app/engine/: dead_letter.py
nexus-ai-operators/app/prompts/: __init__.py  assistant_system_v1.md  diagnosis_system_v1.md  executive_qa_system_v1.md
nexus-ai-operators/app/services/: engine.py  llm_client.py  prompt_context_builder.py  prompt_registry.py  prompt_runtime.py
nexus-ai-operators/nexus_ai_operators.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nexus-ai-operators/tests/evals/: diagnosis_cases.yaml
nexus-ai-operators/tests/integration/: conftest.py  test_api_assistant.py  test_api_health.py  test_api_tick.py
nexus-ai-operators/tests/unit/: test_observer.py  test_prompt_context_builder.py  test_prompt_runtime.py
sdks/python-sdk/: README.md  pyproject.toml
sdks/python-sdk/nexus_sdk/: __init__.py  client.py
sdks/python-sdk/nexus_sdk/integrations/: langchain.py  openai_agents.py
sdks/python-sdk/tests/: test_langchain.py  test_openai_agents.py
(+2338 files in other folders)
