[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-sdk"
version = "0.1.0"
description = "Python SDK for Nexus Gateway — AI agent tool governance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3", "pydantic>=2"]
openai-agents = ["openai-agents>=0.1"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.22"]
